build: fix up sidenav spacing in M3 dev app
Fixes that there wasn't any side padding in the sidenav when using M3 in the dev app.

--- a/src/dev-app/theme-m3.scss
+++ b/src/dev-app/theme-m3.scss
@@ -129,3 +129,8 @@ $density-scales: (-1, -2, -3, -4, minimum, maximum);
 .demo-config-buttons button {
   margin: 4px;
 }
+
+// In M3 we need some spacing around the list in the sidenav.
+mat-nav-list.demo-nav-list {
+  margin: 8px;
+}
